# hoshino-resorts-kaitabi20s-polling-bot

./: .gitignore  README.md  pyproject.toml
src/: .env.sample  logger.py  main.py  notifier.py  webdriver.py
src/models/: notification_history.py  notification_log.py  plan.py
src/notifiers/: factory.py  line.py  notifier.py  slack.py
src/notifiers/fake/: notifier.py
src/notifiers/interfaces/: notifier.py
src/notifiers/line/: notifier.py
src/notifiers/slack/: notifier.py
src/repositories/: factory.py
src/repositories/interfaces/: notification_history_repository.py  notification_repository.py
src/repositories/json/: notification_history_repository.py  notification_repository.py
