[project]
name = "hoshino-resorts-kaitabi20s-polling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"
